Change login with oauth2 from auth flow to client credential flow and refactor code.
